# ScrewRobotStudien

./: .gitmodules  README.md
.github/workflows/: main.yml
3d_druck/: kamera_mount_teil_1.stl  kamera_mount_teil_2.stl  roboter_aufnahme_platte.stl  schelle_teil_1.stl  schelle_teil_2.stl  schelle_teil_3.stl  schelle_teil_4.stl
3d_druck/gcode_prusa_mk3/: kamera_mount_teil_1_2.3mf  kamera_mount_teil_1_2_0.15mm_PLA_MK3_3h32m.gcode  platte.3mf  schelle_teil_1_2_3_4.3mf
data/: README.md
data/clustered/: 0.ply  1.ply  10.ply  11.ply  12.ply  13.ply  14.ply  15.ply  16.ply  17.ply  18.ply  19.ply  2.ply  20.ply  21.ply  22.ply  23.ply  24.ply  25.ply  26.ply  27.ply  28.ply  29.ply  3.ply  30.ply  31.ply  32.ply  33.ply  34.ply  35.ply  36.ply  37.ply  38.ply  39.ply  4.ply  40.ply  41.ply  42.ply  43.ply  44.ply  (+37 more)
ros/: .gitignore
ros/launch/: productive.launch  training.launch
ros/launch/config/: realsense_d435_config.json
ros/src/dhbw_screw_localization/: CMakeLists.txt  package.xml
ros/src/dhbw_screw_localization/include/dhbw_screw_localization/: PclEye.h  PclEyeParameters.h  PclScrew.h  PclScrewRecognitionTools.h
ros/src/dhbw_screw_localization/src/: PclEye.cpp  PclScrewRecognitionTools.cpp
ros/src/ply_reader/: CMakeLists.txt  package.xml
ros/src/ply_reader/src/: ply_reader_node.cpp
ros/src/ply_writer/: CMakeLists.txt  package.xml
ros/src/ply_writer/src/: ply_writer_node.cpp
ros/src/screwer_node/: CMakeLists.txt  package.xml
ros/src/screwer_node/cfg/: ScrewerNode.cfg  default.yaml
ros/src/screwer_node/src/: screwer_node.cpp
ros/src/tf_publisher/: CMakeLists.txt  package.xml
ros/src/tf_publisher/src/: tf_publisher_node.cpp
tools/ply-classifier/: CMakeLists.txt  README.md  main.cpp
tools/svm-trainer/: CMakeLists.txt  README.md  main.cpp
